--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/cthit/VoteIT.git"
+    "url": "https://github.com/BlFitm/VoteIT.git"
   },
   "keywords": [
     "Voting",
-    "Chalmers"
+    "RSMH"
   ],
-  "author": "digIT",
+  "author": "Al",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cthit/VoteIT/issues"
+    "url": "https://github.com/BlFitm/VoteIT/issues"
   },
   "engines": {
     "node": "11"
@@ -39,7 +39,7 @@
     "gulp-babel": "^5.2.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
-    "lodash": "~4.15.0",
+    "lodash": ">=4.17.12"
     "memory-store": "0.0.1",
     "random-js": "^1.0.6",
     "react": "~15.3.1",
